--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,10 +12,10 @@
 
 
 // Text Colors
-@text-color:           hsl(0,0%,66%);
-@text-color-subtle:    hsl(0,0%,50%);
-@text-color-highlight: hsl(0,0%,94%);
-@text-color-selected:  hsl(0,0%,100%);
+@text-color:           #0F1922;
+@text-color-subtle:    #575e64;
+@text-color-highlight: #0f1922;
+@text-color-selected:  #0f1922;
 
 @text-color-info:    hsl(219,  79%, 66%);
 @text-color-success: hsl(140,  44%, 62%);
@@ -33,8 +33,8 @@
 @app-background-color:       darken(@base-background-color, 5%);
 
 // Base colors
-@base-background-color: hsl(222,6%,22%);
-@base-border-color:     darken(@base-background-color, 8%);
+@base-background-color: #e7e8e8;
+@base-border-color:     darken(@base-background-color, 20%);
 
 // Component colors
 @pane-item-background-color: @base-background-color;
